--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ hs_err_pid*
 /JComSci/nbproject/private/
 /JComSci/build/
 /JComSci/dist/
+/vcc-practice/nbproject/private/
+/vcc-practice/build/
+/vcc-practice/dist/
